<resources>
    <string name="app_name">Focus</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_search">Search</string>
    <string name="next">Continue</string>
    <string name="action_take_test">Take test</string>
    <string name="action_about_positive_confessions">About positive confessions</string>
    <string name="short_desc">The student health and well-being app</string>
    <string name="welcome_to">Welcome to</string>
    <string name="register">Register on</string>
    <string name="appointment_request">Appointment request form</string>
    <string name="appointment_desc">Please fill in the form below and tell us what the appointment is about
    so we can prepare accordingly. A member from the team will contact you immediately with more
    information.</string>
    <string name="about_focus">Previous research has revealed that some students will not notice when
    they are tending towards a mental illness until its too late. The goal therefore of this app is to help
    students be able to notice the signs and symptoms of these mental illnesses and therefore prevent them. This
    app does NOT aim at replacing the services you receive from your doctor. Please seek help from your doctor as usual
    and use the Focus app as a compliment.</string>
    <string name="about_app">
        This app aims at helping students prevent mental illnesses (depression,anxiety,stress).
    </string>
    <string name="about_confessions">
        About Positive Confessions
    </string>
    <string name="about_positive_confessions">
        The words we speak carry enormous power to either make or break, build or destroy. The Bible in Proverbs 18:21
        says that death and life are in the power of the tongue, notice how the power is accredited to the tongue. It is
        therefore important that we speak the right things. The purpose of this section is to guide you on the kinds of
        things to say over yourself and your loved ones. All the confessions are taken from Bible verses and the verses
        are provided for personal reference and further study.
    </string>
    <string name="title_activity_make_appointment">Make appointment</string>
    <string name="title_activity_positive_confession">Positive Confessions</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_useful_resources">Useful Resources</string>
    <string name="title_activity_useful_contacts">Useful Contacts</string>
    <string name="title_activity_diary_entry">Diary entry</string>
    <string name="title_activity_new_diary_entry">New entry</string>
    <string name="title_activity_self_evaluation">Self evaluation</string>
    <string name="title_activity_display_note">Goal/objective</string>
    <string name="title_activity_goals_list">Goals/objectives</string>
    <string name="title_activity_mood_diary">Mood diary</string>
    <string name="title_activity_test_score">Test score</string>
    <string name="title_activity_single_test">Test result</string>
    <string name="uni_health_center_address">Riccarton General Practice
        "\n" The Avenue
        "\n" Edinburgh Campus
        "\n" EH14 4AS</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not signed up? Create account.</string>
    <string name="btn_link_to_login">Already registred! Login.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="useful_resources">The links below provide rich information on
    prevention of mental illnesses. Visit the sites to read more about these mental illnesses and get in a better
    position to prevent them.</string>
    <string name="uni_health_center">Heriot Watt university health center.</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="mood_entry_reminder">Set mood entry reminder time</string>
    <string name="default_mood_entry_time">16:00</string>
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of
        Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_mood_time">key_mood_time</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings_headers">Settings with Headers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_delete">Delete</string>
    <string name="notify_new_task_message">A task needs to be reviewed!</string>
    <string name="notify_new_task_title">Task Reminder!</string>
    <string name="no_depression_desc">This score reveals that you are not suffering from depression in a way
    that is harmful to your health, keep it this way but don\'t hesitate to see your doctor if you feel you need
        assistance</string>
    <string name="mild_depression_desc">Some of the symptoms of this kind of depression include irritability/anger,
    hopelessness, feelings of guilt or despair and lack of motivation among others. If you have noticed any of
        these over the past days/weeks, we advise that you seek advise from your doctor on how to go about it. </string>
    <string name="moderate_depression_desc">Moderate depression shares similar symptoms with mild depression including
    problems with self esteem, reduced productivity, feelings of worthlessness, increased sensivities and excessive worrying.
    If you have been feeling this way over the past weeks and it has been hindering your normal work/activities, please seek
    help from you doctor.</string>
    <string name="severe_depression_desc">Severe depression is classified as having the
        symptoms of mild to moderate depression, but the symptoms are severe and noticeable,
        even to your loved ones. This may also cause delusions, feelings of stupor, hallucinations and suicidal thoughts.
        This requires medical treatment and we advise that you see your doctor as soon as possible.</string>
    <string name="no_anxiety_desc">This score reveals that you are fine and not suffering from any kind of
        anxiety. Please monitor your progress after your next test to ensure all is well but if you feel something
    is still not right, do not hesitate to seek help.</string>
    <string name="mild_anxiety_desc">With mild anxiety, the symptoms may not drastically hinder your life and stop you from
    functioning normally but you will still have constant worries, feelings of nervousness, nauseated or shaky. It is still
    advisable to seek help inorder to get more assistance.</string>
    <string name="moderate_anxiety_desc">This score indicates that you are having issues with anxiety in a way that it
    is starting to affect your normal life. The best solution for this is to seek professional help before the situation
        worsens.</string>
    <string name="day">Day</string>
    <string-array name="time">
        <item>Select</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
    </string-array>
</resources>