<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<LinearLayout
    android:orientation="vertical"
    android:padding="@dimen/margin_padding_small"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_large"
        android:id="@+id/appointment_request"
        android:textStyle="bold"
        android:padding="@dimen/margin_padding_normal"
        android:text="@string/appointment_request"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_xxnormal"
        android:id="@+id/appointment_subject"
        android:textStyle="bold"
        android:padding="@dimen/margin_padding_normal"
        android:text="@string/appointment_desc"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/appointment_title"
            android:hint="Reason for appointment"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/appointment_day"
            android:text="@string/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="@dimen/margin_padding_xtiny"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/from"
            android:textSize="@dimen/text_size_header"/>

        <TextView
            android:id="@+id/appointment_time"
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/appointment_day"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/margin_padding_xtiny"
            android:textColor="@color/from"
            android:textSize="@dimen/text_size_header"/>

        <Spinner
            android:id="@+id/days_spinner"
            android:padding="@dimen/margin_padding_xtiny"
            android:layout_below="@+id/appointment_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/time_spinner"
            android:padding="@dimen/margin_padding_xtiny"
            android:layout_below="@+id/appointment_time"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_xxnormal"
        android:padding="@dimen/margin_padding_normal"
        android:textStyle="bold"
        android:text="Message: "/>

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="5" />

    <Button
        android:id="@+id/button_make_appointment"
        android:padding="10dp"
        style="?android:attr/buttonStyleSmall"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Send" />

</LinearLayout>

    </ScrollView>